--- a/Styles.css
+++ b/Styles.css
@@ -1,1 +1,13 @@
-
+        <style>
+            iframe {
+                    display:none;
+            }
+            h2
+            {
+                Color: Gray;
+            }
+                        h3
+            {
+                Color: Green;
+            }
+        </style>
