--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,7 @@
             }
             h2
             {
-                Color: Gray;
-            }
-            h3
-            {
-                Color: Green;
+                Color: Gren;
             }
             h4
             {
