--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
             }
             h1
             {
-                        color: white;
+                        color: grey;
             }
             h2
             {
