--- a/styles.css
+++ b/styles.css
@@ -11,4 +11,8 @@
             {
                         Color: red;
             }
+            h3
+            {
+                        color: red;
+            }
 </style>
