--- a/css/arf.css
+++ b/css/arf.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #000000;
+  background-color: #ffffff;
   font-size: 14px;
   font-family: "Helvetica Neue", Helvetica;
 }
