--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,9 @@ body {
     overflow: hidden;
     position: relative;
     cursor: none; /* Cache le curseur pour un meilleur effet */
-       text-shadow: 0 0 5px #C8C8C8;
+        text-shadow: 0 0 5px #C8C8C8;
+        color: white;
+          font: 1.3rem Inconsolata, monospace;
 }
 .light {
     position: absolute;
