--- a/cyber/css/styles.css
+++ b/cyber/css/styles.css
@@ -1,19 +1,17 @@
-    <style>
-        body {
+        body, html {
             margin: 0;
-            height: 100vh;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
             background-color: #f0f0f0;
-            overflow: hidden;
         }
-        .follower {
+        canvas {
             position: absolute;
-            width: 20px;
-            height: 20px;
-            background-color: red;
-            border-radius: 50%;
-            pointer-events: none; /* Ignore les interactions avec la souris */
+            top: 0;
+            left: 0;
+            z-index: 1;
         }
-    </style>
