--- a/groups/cyber/css/arf.css
+++ b/groups/cyber/css/arf.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffffff;
+  background-color: #000000;
   font-size: 14px;
   font-family: "Helvetica Neue", Helvetica;
 }
