--- a/groups/team/css/arf.css
+++ b/groups/team/css/arf.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to right, #4A90E2, #FF4D4D); /* dégradé bleu à rouge */
+  background: linear-gradient(to right, #1A237E, #FF4D4D); /* dégradé bleu foncé à rouge */
   font-size: 14px;
   font-family: "Helvetica Neue", Helvetica;
 }
